# tp_cpp_iz2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: array.h  employee.h
src/: array.c  consistent.c  employee.c  main.c  parallel.c
tests/: stress_test.c  tests.cpp
